# guidance-for-open-source-3d-reconstruction-toolbox-for-gaussian-splats-on-aws

./: .gitignore  README.md
assets/: Reference Architecture -OS 3D Reconstruction Toolbox GS on AWS.pptx
deployment/cdk/: app.py  cdk.json  config.json  requirements.txt
deployment/cdk/stacks/: infra_stack.py  post_deploy_stack.py
deployment/cdk/stacks/components/: container_deployment.py  ddb.py  ecr.py  lambdas.py  s3.py  sns.py  stepfunctions.py
deployment/terraform/: main.tf  orphan_s3.sh  terraform.tfvars  variables.tf
deployment/terraform/modules/infra/: dynamodb.tf  ecr.tf  iam.tf  kms.tf  lambda.tf  main.tf  outputs.tf  s3.tf  sns.tf  stepfunction.tf  variables.tf
deployment/terraform/modules/post_deployment/: main.tf  outputs.tf  variables.tf
source/: generate_splat.py  readme.md
source/Gradio/: Readme.md  generate_splat_gradio.py  requirements.txt
source/Gradio/favorites/: wolf.spz
source/container/: Dockerfile
source/container/src/: config.json  main.py
source/container/src/pipeline/: pipeline.py
source/container/src/pipeline/image_processing/: filter_blurry_images.py
source/container/src/pipeline/post_processing/: mirror_splat.py  (+1 more)
source/container/src/pipeline/post_processing/spz/src/: CMakeLists.txt  export_macro.h  spz_converter_api.cpp
source/container/src/pipeline/post_processing/spz/src/cc/: load-spz.cc
source/lambda/model_deployment/: index.py  model_deployment.py
source/lambda/workflow_complete/: workflow_complete.py
source/lambda/workflow_trigger/: workflow_trigger.py
source/state-machines/: ASLdefinition.json
(+14 files in other folders)
